--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id 'java'
-    id 'ru.vyarus.quality' version '2.2.0'
-    id 'io.qameta.allure' version '2.3'
+    id 'ru.vyarus.quality' version '2.4.0'
+    id 'io.qameta.allure' version '2.4'
 }
 
 group 'io.github.sskorol'
@@ -22,9 +22,9 @@ repositories {
 dependencies {
     agent "org.aspectj:aspectjweaver:1.8.10"
     compile('org.assertj:assertj-core:3.8.0',
-            'io.github.sskorol:test-data-supplier:1.0.0',
+            'io.github.sskorol:test-data-supplier:1.2.5',
             'org.jooq:joor:0.9.6',
-            'io.qameta.allure:allure-testng:2.0-BETA15',
+            'io.qameta.allure:allure-testng:2.0-BETA19',
             'org.slf4j:slf4j-simple:1.7.25',
             'org.projectlombok:lombok:1.16.18'
     )
@@ -33,7 +33,7 @@ dependencies {
 [compileJava, compileTestJava]*.options*.compilerArgs = ['-parameters']
 
 task wrapper(type: Wrapper) {
-    gradleVersion = '4.0.1'
+    gradleVersion = '4.3'
 }
 
 task copyConfig(type: Copy) {
@@ -53,7 +53,7 @@ test.doFirst {
 test {
     useTestNG() {
         listeners << 'io.github.sskorol.listeners.BaseListener'
-        listeners << 'io.github.sskorol.dataprovider.DataProviderTransformer'
+        listeners << 'io.github.sskorol.core.DataProviderTransformer'
         suites 'src/test/resources/suites/parent.xml'
     }
 
@@ -68,9 +68,9 @@ test.dependsOn copyConfig, copyHistory
 allure {
     autoconfigure = true
     aspectjweaver = true
-    version = '2.2.1'
+    version = '2.4.1'
 
     useTestNG {
-        version = '2.0-BETA15'
+        version = '2.0-BETA14'
     }
 }
