--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'java'
     id 'ru.vyarus.quality' version '2.4.0'
     id 'io.qameta.allure' version '2.5'
+    id 'com.github.ben-manes.versions' version '0.17.0'
 }
 
 group 'io.github.sskorol'
@@ -9,7 +10,6 @@ version '1.0.0'
 description 'Test Data Supplier example'
 
 sourceCompatibility = JavaVersion.VERSION_1_8
-targetCompatibility = JavaVersion.VERSION_1_8
 
 configurations {
     agent
@@ -20,20 +20,20 @@ repositories {
 }
 
 dependencies {
-    agent "org.aspectj:aspectjweaver:1.8.10"
-    compile('org.assertj:assertj-core:3.8.0',
-            'io.github.sskorol:test-data-supplier:1.4.0',
-            'org.jooq:joor:0.9.6',
-            'io.qameta.allure:allure-testng:2.0-BETA21',
-            'org.slf4j:slf4j-simple:1.7.25',
-            'org.projectlombok:lombok:1.16.18'
+    agent "org.aspectj:aspectjweaver:1.8.13"
+    compile('org.assertj:assertj-core:3.9.1',
+            'io.github.sskorol:test-data-supplier:1.5.0',
+            'org.jooq:joor-java-8:0.9.7',
+            'io.qameta.allure:allure-testng:2.6.0',
+            'org.slf4j:slf4j-simple:1.8.0-beta1',
+            'org.projectlombok:lombok:1.16.20'
     )
 }
 
 [compileJava, compileTestJava]*.options*.compilerArgs = ['-parameters']
 
 task wrapper(type: Wrapper) {
-    gradleVersion = '4.3.1'
+    gradleVersion = '4.5.1'
 }
 
 task copyConfig(type: Copy) {
@@ -53,7 +53,6 @@ test.doFirst {
 test {
     useTestNG() {
         listeners << 'io.github.sskorol.listeners.BaseListener'
-        listeners << 'io.github.sskorol.core.DataProviderTransformer'
         suites 'src/test/resources/suites/parent.xml'
     }
 
@@ -67,5 +66,5 @@ test.dependsOn copyConfig, copyHistory
 
 allure {
     autoconfigure = true
-    version = '2.4.1'
+    version = '2.6.0'
 }
